Update the first almost complete version (except teaching)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,199 @@ title: Home
 </div>
 <h5>Vitæ</h5>
 
-  <p>Full Resume in <a href={{ "/assets/cv/cv_web.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <p>Full Resume in <a href={{ "/assets/cv/cv_web.pd" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+
+  <!-- ========== prospective-students ========== -->
+  <div id="prospective-students">
+  <h4>Prospective Students</h4>
+
+  <p>Our lab welcomes exceptional and motivated students and visitors at all levels (bachelor's, master's, doctoral, postdoctoral) who are passionate about advancing the fields of machine learning, artificial intelligence, and bioinformatics. If you have a strong
+     background in machine learning, computer science, statistics, or related disciplines and wish to apply to the <a href="https://uwaterloo.ca/computational-mathematics/future-masters-students/masters-program" target="_blank">
+     Computational Mathematics (CM) Master's Program</a>, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/graduate-studies/programs/phd" target="_blank">PhD in Statistics</a>,
+     or <a href="https://uwaterloo.ca/future-graduate-students/programs/by-faculty/math/computer-science-doctor-philosophy-phd" target="_blank">PhD in Computer Science</a>, please <br><br>
+      <a href="https://forms.gle/idkJa37QbaCEJ3Fy9" target="_blank"><img src="{{ '/assets/images/form_icon.webp' | prepend: site.baseurl }}" alt="Apply Icon" style="width: 24px; vertical-align: middle; margin-right: 8px;"> <strong>Fill out this form</strong></a>.</p>
+  
+  
+  <p>We are seeking Master's and PhD students for the following research projects:</p>
+  <ul>
+    <li><strong>Deep Learning for Identity and Access Control:</strong> Develop deep learning models for identity detection, authentication, and access control using multimodal data (e.g., voice, gestures, neuro/biological signals).</li>
+    <li><strong>Bioinformatics and Computational Antibody Design:</strong> Advance computational methods for integrating biological sequences with structural data for antibody design and optimization.</li>
+    <li><strong>Generative AI and Large Language Models (LLMs):</strong> Work on the development and optimization of LLMs for various applications, including novel generative AI models.</li>
+  </ul>
+  
+  
+  
+  <h6>Required Skills:</h6>
+  <ul>
+    <li>Strong understanding of machine learning, deep learning, and optimization techniques.</li>
+    <li>Proficiency in programming with machine learning frameworks (e.g., PyTorch, TensorFlow).</li>
+    <li>For the bioinformatics project, familiarity with biology is essential.</li>
+  </ul>
+  
+  <h6>Note on Master's Programs</h6>
+  <p>Our lab does not currently accept Master’s students in the Computer Science program. However, students are strongly encouraged to consider the <a href="https://uwaterloo.ca/computational-mathematics/future-masters-students/masters-program" target="_blank">Computational Mathematics (CM) Master's Program</a>. This one-year, funded, research-based program is designed to provide a strong foundation in cutting-edge research, preparing students for advanced academic or industry roles. An optional extension with two co-op terms is also available, offering valuable practical experience.</p>
+  
+  <p>For the Statistics Master’s program, admission begins with the course-based option. After enrollment, students may have the opportunity to transition to a thesis-based program with a supervisor.</p>
+  
+<!-- ========== DATA SCIENCE LAB ========== -->
+<div class="docs-section" id="data-science-lab">
+  <h4>Data Science Lab</h4>
+  <p>The Data Science Lab, directed by Ali Ghodsi, focuses on advancing the theoretical foundations and developing innovative algorithms in machine learning, deep learning, and artificial intelligence. While our primary emphasis is on designing novel methodologies, our research also explores impactful applications in areas such as natural language processing and bioinformatics.</p>
+
+  <h5>Current Members</h5>
+  <ul>
+    <li><b>Mahdi Karami</b> — Senior Scientist, Research Scientist @ Google Research</li>
+    <li><b>Aref Jafari</b> — PhD Student</li>
+    <li><b>Zhang Ma</b> — PhD Student</li>
+    <li><b>Lena Podina</b> — PhD Student</li>
+    <li><b>Daniel Zhang</b> — PhD Student</li>
+    <li><b>Amin Ravanbakhsh</b> — Master’s Student</li>
+    <li><b>Mojtaba Moodi</b> — Master’s Student</li>
+  </ul>
+
+  <h5>Alumni</h5>
+  <!-- <h6>PhD Graduates</h6>
+  <ul> -->
+    <li><b>Babak Alipanahi</b> — Co-founder and CSO @ Exai Bio</li>
+    <li><b>Tameem Adel</b> — Assistant Professor @ University of Cambridge</li>
+    <li><b>Pooyan Khajehpour Tadavoni</b> — Software Engineer @ Google</li>
+    <li><b>Ahmed Farahat</b> — Principal Research Scientist @ Hitachi America</li>
+    <li><b>Mehrdad Jabarzadeh Gangeh</b> — Principal Imaging Scientist @ Roche</li>
+    <li><b>Rui Qiao</b> — Applied Scientist @ Amazon</li>
+    <li><b>Maysum Panju</b> — NLP Scientist @ Adeptmind</li>
+    <li><b>Ershad Banijamali</b> — Applied Scientist, Artificial General Intelligence @ Amazon</li>
+    <li><b>Daniel Severn</b> — PhD Graduate</li>
+    <li><b>Mojtaba Valipour</b> — Founding Engineer @ Coastal Carbon</li>
+  </ul>
+
+  <!-- <h6>Master’s Graduates</h6>
+  <ul> -->
+    <li><b>Amir-Hossein Karimi</b> — Assistant Professor @ University of Waterloo</li>
+    <li><b>Bowen You</b> — Co-founder @ Fairblock</li>
+    <li><b>Benyamin Jamialahmadi</b> — NLP Research Scientist</li>
+    <li><b>Maryam Yalsavar</b> — Master’s Graduate</li>
+    <li><b>Ali Saheb Pasand</b> — Researcher @ Mila/McGill</li>
+    <li><b>Amirreza Lashkari</b> — AI Researcher @ Amazon</li>
+    <li><b>Elnaz Barshan</b> — Senior Machine Learning Engineer @ Google</li>
+    <li><b>Jinchao Lin</b> — Software Engineer @ Google</li>
+    <li><b>Grace Yang</b> — Software Engineer, Machine Learning @ Meta</li>
+    <li><b>Fatemeh Dorri</b> — Principal Bioinformatics Scientist @ Roche</li>
+    <li><b>Trevor Sabourin</b> — Family Physician</li>
+    <li><b>Hadi Zarkoob</b> — Senior Data Scientist @ Genalyte, Inc.</li>
+    <li><b>Stefan Pintilie</b> — Compiler Optimization Developer @ IBM</li>
+    <li><b>Maryam Iraniparast</b> — Data Analyst @ University of Waterloo</li>
+  </ul>
+</div>
+
+
+
+<!-- ========== TEACHING ========== -->
+<body>
+  <!-- Teaching Section -->
+  <div class="docs-section" id="teaching">
+    <h4>Teaching</h4>
+    <div class="intro-text">
+      <p>I will be teaching the following courses in Winter 2025:</p>
+      <ul>
+        <li><strong>Deep Learning (STAT 940)</strong> - Online</li>
+        <li><strong>Generative AI and Large Language Models (STAT 946)</strong></li>
+      </ul>
+    </div>
+    <h5>Previously Taught Courses</h5>
+
+    <div class="teaching-columns">
+      <!-- Deep Learning Card -->
+      <div class="teaching-card" data-course="deep-learning">
+        <div class="card-image">
+          <img src="{{ '/assets/images/deep-learning.jpg' | prepend: site.baseurl }}" alt="Deep Learning">
+        </div>
+        <div class="card-overlay">Deep Learning</div>
+      </div>
+
+      <!-- Supervised Learning Card -->
+      <div class="teaching-card" data-course="supervised-learning">
+        <div class="card-image">
+          <img src="{{ '/assets/images/supervised-learning.jpg' | prepend: site.baseurl }}" alt="Supervised Learning">
+        </div>
+        <div class="card-overlay">Supervised Learning</div>
+      </div>
+
+      <!-- Unsupervised Learning Card -->
+      <div class="teaching-card" data-course="unsupervised-learning">
+        <div class="card-image">
+          <img src="{{ '/assets/images/unsupervised-learning.jpg' | prepend: site.baseurl }}" alt="Unsupervised Learning">
+        </div>
+        <div class="card-overlay">Unsupervised Learning</div>
+      </div>
+    </div>
+
+    <!-- Course Content -->
+    <div class="course-content" id="deep-learning-content">
+      <h5>Deep Learning</h5>
+      <ul>
+        <li><a href="https://www.youtube.com/deep_learning_videos" target="_blank">Lecture Videos</a></li>
+        <li><a href="https://www.example.com/deep_learning_slides" target="_blank">Slides</a></li>
+      </ul>
+    </div>
+
+    <div class="course-content" id="supervised-learning-content">
+      <h5>Supervised Learning</h5>
+      <ul>
+        <li><a href="https://www.youtube.com/supervised_learning_videos" target="_blank">Lecture Videos</a></li>
+        <li><a href="https://www.example.com/supervised_learning_slides" target="_blank">Slides</a></li>
+      </ul>
+    </div>
+
+    <div class="course-content" id="unsupervised-learning-content">
+      <h5>Unsupervised Learning</h5>
+      <ul>
+        <li><a href="https://www.youtube.com/unsupervised_learning_videos" target="_blank">Lecture Videos</a></li>
+        <li><a href="https://www.example.com/unsupervised_learning_slides" target="_blank">Slides</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <style>
+    .course-content {
+      display: none;
+      margin-top: 20px;
+    }
+
+    .teaching-card:hover + .course-content,
+    .teaching-card.active + .course-content {
+      display: block;
+    }
+
+    .teaching-card {
+      cursor: pointer;
+    }
+  </style>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const cards = document.querySelectorAll(".teaching-card");
+      const contents = document.querySelectorAll(".course-content");
+
+      cards.forEach(card => {
+        card.addEventListener("click", () => {
+          // Remove active state from all cards
+          cards.forEach(c => c.classList.remove("active"));
+          contents.forEach(content => content.style.display = "none");
+
+          // Add active state to the clicked card
+          card.classList.add("active");
+
+          // Show the corresponding content
+          const course = card.dataset.course;
+          document.getElementById(`${course}-content`).style.display = "block";
+        });
+      });
+    });
+  </script>
+</body>
+
+
+
 
 
 <!-- ========== PUBLICATIONS ========== -->
@@ -23,8 +215,7 @@ title: Home
   <h4>Publications</h4>
 
   <p>Most recent publications on <a href="{{ site.data.main_info.google_scholar }}" target="_blank">Google Scholar</a>.<br/>
-  <sup>‡</sup> indicates equal contribution.
-  </p>
+   </p>
 
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#papers-selected">Selected</div></li>
@@ -183,183 +374,22 @@ title: Home
   </div>
 </div>
 
-<!-- ========== TEACHING ========== -->
-<body>
-  <!-- Teaching Section -->
-  <div class="docs-section" id="teaching">
-    <h4>Teaching</h4>
-    <div class="intro-text">
-      <p>I will be teaching the following courses in Winter 2025:</p>
-      <ul>
-        <li><strong>Deep Learning (STAT 940)</strong> - Online</li>
-        <li><strong>Generative AI and Large Language Models (STAT 946)</strong></li>
-      </ul>
-    </div>
-    <h5>Previously Taught Courses</h5>
-
-    <div class="teaching-columns">
-      <!-- Deep Learning Card -->
-      <div class="teaching-card" data-course="deep-learning">
-        <div class="card-image">
-          <img src="{{ '/assets/images/deep-learning.jpg' | prepend: site.baseurl }}" alt="Deep Learning">
-        </div>
-        <div class="card-overlay">Deep Learning</div>
-      </div>
-
-      <!-- Supervised Learning Card -->
-      <div class="teaching-card" data-course="supervised-learning">
-        <div class="card-image">
-          <img src="{{ '/assets/images/supervised-learning.jpg' | prepend: site.baseurl }}" alt="Supervised Learning">
-        </div>
-        <div class="card-overlay">Supervised Learning</div>
-      </div>
-
-      <!-- Unsupervised Learning Card -->
-      <div class="teaching-card" data-course="unsupervised-learning">
-        <div class="card-image">
-          <img src="{{ '/assets/images/unsupervised-learning.jpg' | prepend: site.baseurl }}" alt="Unsupervised Learning">
-        </div>
-        <div class="card-overlay">Unsupervised Learning</div>
-      </div>
-    </div>
-
-    <!-- Course Content -->
-    <div class="course-content" id="deep-learning-content">
-      <h5>Deep Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/deep_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/deep_learning_slides" target="_blank">Slides</a></li>
-      </ul>
-    </div>
-
-    <div class="course-content" id="supervised-learning-content">
-      <h5>Supervised Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/supervised_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/supervised_learning_slides" target="_blank">Slides</a></li>
-      </ul>
-    </div>
-
-    <div class="course-content" id="unsupervised-learning-content">
-      <h5>Unsupervised Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/unsupervised_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/unsupervised_learning_slides" target="_blank">Slides</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <style>
-    .course-content {
-      display: none;
-      margin-top: 20px;
-    }
-
-    .teaching-card:hover + .course-content,
-    .teaching-card.active + .course-content {
-      display: block;
-    }
-
-    .teaching-card {
-      cursor: pointer;
-    }
-  </style>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const cards = document.querySelectorAll(".teaching-card");
-      const contents = document.querySelectorAll(".course-content");
-
-      cards.forEach(card => {
-        card.addEventListener("click", () => {
-          // Remove active state from all cards
-          cards.forEach(c => c.classList.remove("active"));
-          contents.forEach(content => content.style.display = "none");
-
-          // Add active state to the clicked card
-          card.classList.add("active");
-
-          // Show the corresponding content
-          const course = card.dataset.course;
-          document.getElementById(`${course}-content`).style.display = "block";
-        });
-      });
-    });
-  </script>
-</body>
 
 
-
-
-<!-- ========== DATA SCIENCE LAB ========== -->
-<div class="docs-section" id="data-science-lab">
-  <h4>Data Science Lab</h4>
-  <p>The Data Science Lab, directed by Ali Ghodsi, focuses on advancing the theoretical foundations and developing innovative algorithms in machine learning, deep learning, and artificial intelligence. While our primary emphasis is on designing novel methodologies, our research also explores impactful applications in areas such as natural language processing and bioinformatics.</p>
-
-  <h5>Current Members</h5>
-  <ul>
-    <li><b>Mahdi Karami</b> — Senior Scientist, Research Scientist @ Google Research</li>
-    <li><b>Aref Jafari</b> — PhD Student</li>
-    <li><b>Zhang Ma</b> — PhD Student</li>
-    <li><b>Lena Podina</b> — PhD Student</li>
-    <li><b>Daniel Zhang</b> — PhD Student</li>
-    <li><b>Amin Ravanbakhsh</b> — Master’s Student</li>
-    <li><b>Mojtaba Moodi</b> — Master’s Student</li>
-  </ul>
-
-  <h5>Alumni</h5>
-  <!-- <h6>PhD Graduates</h6>
-  <ul> -->
-    <li><b>Babak Alipanahi</b> — Co-founder and CSO @ Exai Bio</li>
-    <li><b>Tameem Adel</b> — Assistant Professor @ University of Cambridge</li>
-    <li><b>Pooyan Khajehpour Tadavoni</b> — Software Engineer @ Google</li>
-    <li><b>Ahmed Farahat</b> — Principal Research Scientist @ Hitachi America</li>
-    <li><b>Mehrdad Jabarzadeh Gangeh</b> — Principal Imaging Scientist @ Roche</li>
-    <li><b>Rui Qiao</b> — Applied Scientist @ Amazon</li>
-    <li><b>Maysum Panju</b> — NLP Scientist @ Adeptmind</li>
-    <li><b>Ershad Banijamali</b> — Applied Scientist, Artificial General Intelligence @ Amazon</li>
-    <li><b>Daniel Severn</b> — PhD Graduate</li>
-    <li><b>Mojtaba Valipour</b> — Founding Engineer @ Coastal Carbon</li>
-  </ul>
-
-  <!-- <h6>Master’s Graduates</h6>
-  <ul> -->
-    <li><b>Amir-Hossein Karimi</b> — Assistant Professor @ University of Waterloo</li>
-    <li><b>Bowen You</b> — Co-founder @ Fairblock</li>
-    <li><b>Benyamin Jamialahmadi</b> — NLP Research Scientist</li>
-    <li><b>Maryam Yalsavar</b> — Master’s Graduate</li>
-    <li><b>Ali Saheb Pasand</b> — Researcher @ Mila/McGill</li>
-    <li><b>Amirreza Lashkari</b> — AI Researcher @ Amazon</li>
-    <li><b>Elnaz Barshan</b> — Senior Machine Learning Engineer @ Google</li>
-    <li><b>Jinchao Lin</b> — Software Engineer @ Google</li>
-    <li><b>Grace Yang</b> — Software Engineer, Machine Learning @ Meta</li>
-    <li><b>Fatemeh Dorri</b> — Principal Bioinformatics Scientist @ Roche</li>
-    <li><b>Trevor Sabourin</b> — Family Physician</li>
-    <li><b>Hadi Zarkoob</b> — Senior Data Scientist @ Genalyte, Inc.</li>
-    <li><b>Stefan Pintilie</b> — Compiler Optimization Developer @ IBM</li>
-    <li><b>Maryam Iraniparast</b> — Data Analyst @ University of Waterloo</li>
+<!-- ========== NEWS ========== -->
+<div class="docs-section" id="news">
+  <h4>News</h4>
+  <ul class="news-list">
+    {% for item in site.data.news %}
+    <li>
+      <strong>{{ item.date }}:</strong>
+      {% if item.description %}
+        <p>{{ item.description | markdownify }}</p>
+      {% endif %}
+    </li>
+    {% endfor %}
   </ul>
 </div>
-
-
-<!-- ========== prospective-students ========== -->
-<div class="docs-section" id="prospective-students">
-
-  <h4>Prospective Students</h4>
-
-  <p>Our lab welcomes exceptional and motivated students and visitors at all levels (bachelor's, master's, doctoral, postdoctoral) who are passionate about advancing the fields of machine learning, artificial intelligence, and bioinformatics. If you have a strong
-   background in machine learning, computer science, statistics, or related disciplines and wish to apply to the <a href="https://uwaterloo.ca/computational-mathematics/future-masters-students/masters-program" target="_blank">
-   Computational Mathematics (CM) Master's Program</a>, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/graduate-studies/programs/phd" target="_blank">PhD in Statistics</a>,
-   or <a href="https://uwaterloo.ca/future-graduate-students/programs/by-faculty/math/computer-science-doctor-philosophy-phd" target="_blank">PhD in Computer Science</a>, please <br><br>
-    <a href="https://forms.gle/idkJa37QbaCEJ3Fy9" target="_blank"><img src="{{ '/assets/images/form_icon.webp' | prepend: site.baseurl }}" alt="Apply Icon" style="width: 24px; vertical-align: middle; margin-right: 8px;"> <strong>Fill out this form</strong></a>.</p>
-
-    <h5>Note on Master's Programs</h5>
-    <p>Our lab does not currently accept Master’s students in the Computer Science program. However, students are strongly encouraged to consider the <a href="https://uwaterloo.ca/computational-mathematics/future-masters-students/masters-program" target="_blank">Computational Mathematics (CM) Master's Program</a>. This one-year, funded, research-based program is designed to provide a strong foundation in cutting-edge research, preparing students for advanced academic or industry roles. An optional extension with two co-op terms is also available, offering valuable practical experience.</p>
-    
-    <p>For the Statistics Master’s program, admission begins with the course-based option. After enrollment, students may have the opportunity to transition to a thesis-based program with a supervisor.</p>
-    
-</div>
-
 
 
 
