Add course outline PDFs

--- a/index.html
+++ b/index.html
@@ -114,11 +114,24 @@ title: Home
     <div class="intro-text">
       <p>I will be teaching the following courses in Winter 2025:</p>
       <ul>
-        <li><strong>Deep Learning (STAT 940)</strong> - Online</li>
-        <li><strong>Generative AI and Large Language Models (STAT 946)</strong></li>
+        <li>
+          <strong>Deep Learning (STAT 940)</strong> - Online
+          <a href="{{ '/assets/pdfs/stat940_outline.pdf' | prepend: site.baseurl }}" target="_blank">
+            [Course Outline - PDF]
+          </a>
+        </li>
+        <li>
+          <strong>Generative AI and Large Language Models (STAT 946)</strong>
+          <a href="{{ '/assets/pdfs/stat946_outline.pdf' | prepend: site.baseurl }}" target="_blank">
+            [Course Outline - PDF]
+          </a>
+        </li>
       </ul>
     </div>
     <h5>Previously Taught Courses</h5>
+  </div>
+</body>
+
 
     <div class="teaching-columns">
       <!-- Deep Learning Card -->
