current students, news updated and link to all courses added

--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@ title: Home
   <ul>
     <li><b>Mahdi Karami</b> — Senior Scientist, Research Scientist @ Google Research</li>
     <li><b>Aref Jafari</b> — PhD Student</li>
-    <li><b>Zhang Ma</b> — PhD Student</li>
     <li><b>Lena Podina</b> — PhD Student</li>
     <li><b>Daniel Zhang</b> — PhD Student</li>
-    <li><b>Amin Ravanbakhsh</b> — Master’s Student</li>
-    <li><b>Mojtaba Moodi</b> — Master’s Student</li>
+    <li><b>Amin Ravanbakhsh</b> — Master's Student</li>
+    <li><b>Mojtaba Moodi</b> — Master's Student</li>
+    <li><b>Max Homm</b> — Master's Student</li>
+    <li><b>Kefah Alshaer</b> — Master's Student</li>
   </ul>
 
   <h5>Alumni</h5>
   <!-- <h6>PhD Graduates</h6>
   <ul> -->
+    <li><b>Zhang Ma</b> — Research Scientist @ Bioinformatics Solutions Inc (BIS)</li>
     <li><b>Babak Alipanahi</b> — Co-founder and CSO @ Exai Bio</li>
     <li><b>Tameem Adel</b> — Assistant Professor @ University of Cambridge</li>
     <li><b>Pooyan Khajehpour Tadavoni</b> — Software Engineer @ Google</li>
@@ -123,22 +125,20 @@ title: Home
   <!-- Teaching Section -->
   <div class="docs-section" id="teaching">
     <h4>Teaching</h4>
+    
+    <!-- Link to comprehensive course videos and slides -->
+    <div style="margin-bottom: 25px; padding: 15px; background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); border-radius: 8px; border-left: 4px solid #007bff;">
+      <p style="margin: 0; font-size: 16px;">
+        <i class="fa fa-video-camera" aria-hidden="true" style="color: #007bff; margin-right: 10px; font-size: 18px;"></i>
+        <strong>Complete Course Videos & Slides:</strong> 
+        <a href="https://uwaterloo.ca/data-analytics/videos-and-slides-courses" target="_blank" style="color: #007bff; text-decoration: none; font-weight: 600;">
+          View all course materials, lectures, and slides
+          <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 5px; font-size: 14px;"></i>
+        </a>
+      </p>
+    </div>
+    
     <div class="intro-text">
-      <p>I will be teaching the following courses in Winter 2025:</p>
-      <ul>
-        <li>
-          <strong>Deep Learning (STAT 940)</strong> - Online
-          <a href="{{ '/assets/pdfs/stat940_outline.pdf' | prepend: site.baseurl }}" target="_blank">
-            [Course Outline - PDF]
-          </a>
-        </li>
-        <li>
-          <strong>Generative AI and Large Language Models (STAT 946)</strong>
-          <a href="{{ '/assets/pdfs/stat946_outline.pdf' | prepend: site.baseurl }}" target="_blank">
-            [Course Outline - PDF]
-          </a>
-        </li>
-      </ul>
     </div>
     <h5>Previously Taught Courses</h5>
   </div>
