--- a/index.html
+++ b/index.html
@@ -173,27 +173,108 @@ title: Home
 
     <!-- Course Content -->
     <div class="course-content" id="deep-learning-content">
-      <h5>Deep Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/deep_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/deep_learning_slides" target="_blank">Slides</a></li>
-      </ul>
+      <h5>Deep Learning (STAT 940)</h5>
+      <div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 5px; padding: 15px; background-color: #f9f9f9;">
+        <ol style="margin: 0; padding-left: 20px; line-height: 1.8;">
+          <li><strong><a href="https://www.youtube.com/watch?v=RLH2meHRHHc&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=2" target="_blank" style="color: #004080; text-decoration: none;">Deep Learning, Motivation and course administrations</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec1.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=ra6jYAdeXSI&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=2" target="_blank" style="color: #004080; text-decoration: none;">Feedforward Neural Network, Backpropagation</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec2.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=2HFe32WAvpo&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=3" target="_blank" style="color: #004080; text-decoration: none;">Optimization</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec3_from_stat940-allslidespdf_1-3.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=EhRU-UW0r4A&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=4" target="_blank" style="color: #004080; text-decoration: none;">Regularization</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec4_from_stat940-allslidespdf_1-4.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=vUaevfg_WC0&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=5" target="_blank" style="color: #004080; text-decoration: none;">Dropout, Batch Normalization</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec5_from_stat940-allslidespdf_1-5.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=v--JD0OupGU&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=6" target="_blank" style="color: #004080; text-decoration: none;">Convolutional Neural Networks (CNN)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec6_from_stat940-allslidespdf_1-6.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=puLF9gBt4ok&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=7" target="_blank" style="color: #004080; text-decoration: none;">Regularization (Layer norm, FRN, TRU), Keras</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec7_from_stat940-allslidespdf_1-7.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=MkLDNhUrFls&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=8" target="_blank" style="color: #004080; text-decoration: none;">Recurrent neural network (RNN)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec8.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=JNwj1qoiI_c&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=9" target="_blank" style="color: #004080; text-decoration: none;">Attention mechanism, self-attention, S2S</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec9_from_stat940-allslidespdf_1-9.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=JgWXZmQ0Q-0&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=10" target="_blank" style="color: #004080; text-decoration: none;">Transformers</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec10.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=kiVGxInNmoQ&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=11" target="_blank" style="color: #004080; text-decoration: none;">BERT and GPT</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec11_from_stat940-allslidespdf_1-11.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=gjBvRuO2d3g&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=12" target="_blank" style="color: #004080; text-decoration: none;">Deep Reinforcement Learning (Part 1)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec12_from_stat940-allslidespdf_1-12.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=rA3csDy6aC0&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=13" target="_blank" style="color: #004080; text-decoration: none;">Deep Reinforcement Learning (Part 2)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec13.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=qAKx96YWm-Y&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=14" target="_blank" style="color: #004080; text-decoration: none;">RLHF, ChatGPT, Alignment in LLMs</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec14.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=gErs0bAM63E&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=15" target="_blank" style="color: #004080; text-decoration: none;">Variational Autoencoder, VAE, Performer</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec15_from_stat940-allslidespdf_1-15.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=eZEJkvND8Pw&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=16" target="_blank" style="color: #004080; text-decoration: none;">Generative Adversarial Networks (GAN), AAE</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec16_from_stat940-allslidespdf_1-16.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=7wf06Ae9f4Y&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=17" target="_blank" style="color: #004080; text-decoration: none;">Diffusion Models, DDPMs</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec17_from_stat940-allslidespdf_1-17.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=BWOT57PPZ0Q&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=18" target="_blank" style="color: #004080; text-decoration: none;">Graph Neural Network (Part 1)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec18.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=XnwtEr8c0Xo&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=19" target="_blank" style="color: #004080; text-decoration: none;">Graph Neural Network (Part 2)</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec19_from_stat940-allslidespdf_1-19.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=ztAgmoGGAKU&list=PLehuLRPyt1HxuYpdlW4KevYJVOSDG3DEz&index=20" target="_blank" style="color: #004080; text-decoration: none;">PAC Learnability in Deep Learning</a></strong> - <a href="https://uwaterloo.ca/data-analytics/sites/default/files/uploads/documents/lec20_from_stat940-allslidespdf_1-20.pdf" target="_blank" style="color: #0066cc;">Slides (PDF)</a></li>
+        </ol>
+        <div style="margin-top: 15px; padding-top: 10px; border-top: 1px solid #ddd;">
+          <p style="margin: 0; font-size: 14px; color: #666;">
+            <i class="fa fa-info-circle" style="margin-right: 5px;"></i>
+            For complete video lectures and additional materials, visit the 
+            <a href="https://uwaterloo.ca/data-analytics/videos-and-slides-courses" target="_blank" style="color: #007bff;">
+              comprehensive course page
+            </a>.
+          </p>
+        </div>
+      </div>
     </div>
 
     <div class="course-content" id="supervised-learning-content">
-      <h5>Supervised Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/supervised_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/supervised_learning_slides" target="_blank">Slides</a></li>
-      </ul>
+      <h5>Supervised Learning (STAT 441/841)</h5>
+      <div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 5px; padding: 15px; background-color: #f9f9f9;">
+        <ol style="margin: 0; padding-left: 20px; line-height: 1.8;">
+          <li><strong><a href="https://www.youtube.com/watch?v=VR5ZRr4QOYk" target="_blank" style="color: #004080; text-decoration: none;">Intro to classifiers, Bayesian classifiers, LDA and QDA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=JWozRg_X-Vg&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=3" target="_blank" style="color: #004080; text-decoration: none;">QDA, PCA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=qL1OaF5eBvc&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=4" target="_blank" style="color: #004080; text-decoration: none;">FDA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=w3xbI-OseCI&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=5" target="_blank" style="color: #004080; text-decoration: none;">Logistic regression</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=769aJ5DWn-E&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=6" target="_blank" style="color: #004080; text-decoration: none;">Model selection, Neural Networks</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=DW3lSYltfzo" target="_blank" style="color: #004080; text-decoration: none;">Spectral Clustering, Laplacian Eigenmap, MVU</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=db2bTBElhEU&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=7" target="_blank" style="color: #004080; text-decoration: none;">Back Propagation, RBN</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=Wrsb8rywx1U&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=8" target="_blank" style="color: #004080; text-decoration: none;">Complexity control for RBN</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=SHBFk1ULNlE" target="_blank" style="color: #004080; text-decoration: none;">Regularization, Hard Margin SVM</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=rLT4OFy-atc" target="_blank" style="color: #004080; text-decoration: none;">SVM, Kernel SVM</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=iZ3HF2_vF2c" target="_blank" style="color: #004080; text-decoration: none;">Soft Margin SVM</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=GhsHPY3-1zY" target="_blank" style="color: #004080; text-decoration: none;">Metric Learning</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=L9YcKclqx6k&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=12" target="_blank" style="color: #004080; text-decoration: none;">SPCA, Naive Bayes, K-nearest neighbour</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=ZgxroF1Evcc&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=14" target="_blank" style="color: #004080; text-decoration: none;">Convolutional Neural Networks</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=7noJSd_7m5M&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=15" target="_blank" style="color: #004080; text-decoration: none;">Random features, Tree</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=lTCaEwhnDdw" target="_blank" style="color: #004080; text-decoration: none;">Tree, Boosting method</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=SEekcR7wdBc" target="_blank" style="color: #004080; text-decoration: none;">Boosting method</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=tSee9TSbhJo&list=PLehuLRPyt1HzXDemu7K4ETcF0Ld_B5adG&index=16" target="_blank" style="color: #004080; text-decoration: none;">Bagging</a></strong></li>
+        </ol>
+        <div style="margin-top: 15px; padding-top: 10px; border-top: 1px solid #ddd;">
+          <p style="margin: 0; font-size: 14px; color: #666;">
+            <i class="fa fa-info-circle" style="margin-right: 5px;"></i>
+            For complete video lectures and additional materials, visit the 
+            <a href="https://uwaterloo.ca/data-analytics/videos-and-slides-courses" target="_blank" style="color: #007bff;">
+              comprehensive course page
+            </a>.
+          </p>
+        </div>
+      </div>
     </div>
 
     <div class="course-content" id="unsupervised-learning-content">
-      <h5>Unsupervised Learning</h5>
-      <ul>
-        <li><a href="https://www.youtube.com/unsupervised_learning_videos" target="_blank">Lecture Videos</a></li>
-        <li><a href="https://www.example.com/unsupervised_learning_slides" target="_blank">Slides</a></li>
-      </ul>
+      <h5>Unsupervised Learning (STAT 442/842)</h5>
+      <div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 5px; padding: 15px; background-color: #f9f9f9;">
+        <ol style="margin: 0; padding-left: 20px; line-height: 1.8;">
+          <li><strong><a href="https://www.youtube.com/watch?v=L-pQtGm3VS8" target="_blank" style="color: #004080; text-decoration: none;">Principal Component Analysis</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=jeOEXCFK30M" target="_blank" style="color: #004080; text-decoration: none;">PCA (Ordinary, Dual, Kernel)</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=qL1OaF5eBvc" target="_blank" style="color: #004080; text-decoration: none;">FDA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=RPjPLlGefzw" target="_blank" style="color: #004080; text-decoration: none;">MDS, Isomap, LLE</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=V680Ev0MNvs&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=4" target="_blank" style="color: #004080; text-decoration: none;">LLE, Spectral Clustering</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=DW3lSYltfzo&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=6" target="_blank" style="color: #004080; text-decoration: none;">Spectral Clustering, Laplacian Eigenmap, MVU</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=ybvz68FdpwU&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=7" target="_blank" style="color: #004080; text-decoration: none;">MVU, Action Respecting Embedding, Supervised PCA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=DkdrFwevais" target="_blank" style="color: #004080; text-decoration: none;">Supervised PCA</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=P5Pu1o7w3TM" target="_blank" style="color: #004080; text-decoration: none;">SPCA, Nystrom Approximation, NMF</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=_p72JZPO65E" target="_blank" style="color: #004080; text-decoration: none;">NMF via R1D algorithm</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=R9mt1tqljrk&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=11" target="_blank" style="color: #004080; text-decoration: none;">Sum-Product Networks</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=syWB-YMYZvI&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=12" target="_blank" style="color: #004080; text-decoration: none;">Neural Networks, Autoencoders, Word2Vec</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=GMCwS7tS5ZM&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=13" target="_blank" style="color: #004080; text-decoration: none;">Word2Vec Skip-Gram</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=Q6U3gpzwnx0&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=14" target="_blank" style="color: #004080; text-decoration: none;">Autoencoders, Clustering, Mixture of Gaussians</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=4GBgqmq0XAY&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=15" target="_blank" style="color: #004080; text-decoration: none;">t-SNE</a></strong></li>
+          <li><strong><a href="https://www.youtube.com/watch?v=weipjHmkCHk&list=PLehuLRPyt1HzQoXEhtNuYTmd0aNQvtyAK&index=15" target="_blank" style="color: #004080; text-decoration: none;">Variational Autoencoders</a></strong></li>
+        </ol>
+        <div style="margin-top: 15px; padding-top: 10px; border-top: 1px solid #ddd;">
+          <p style="margin: 0; font-size: 14px; color: #666;">
+            <i class="fa fa-info-circle" style="margin-right: 5px;"></i>
+            For complete video lectures and additional materials, visit the 
+            <a href="https://uwaterloo.ca/data-analytics/videos-and-slides-courses" target="_blank" style="color: #007bff;">
+              comprehensive course page
+            </a>.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
